css changes and photos made responsive

--- a/src/app/form-component/form-component.component.css
+++ b/src/app/form-component/form-component.component.css
@@ -7,7 +7,7 @@
 }
 
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+.nav-pills .nav-link.active, .nav-pills .show  .nav-link {
 
   color: white;
   background-color: black;
