--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -16,7 +16,7 @@
   <br>
   <!--error div-->
   <div *ngIf="error">
-    <div class="alert alert-warning container" role="alert">
+    <div class="alert alert-warning container" style="margin-top: 20px" role="alert">
       {{ errorMessage }}
     </div>
 
