--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -9,7 +9,7 @@
   </button>
   <br>
   <ng-container *ngIf="ws.getStorage().length==0">
-    <div class="alert alert-warning container" role="alert">
+    <div class="alert alert-warning container" style="margin-top: 20px" role="alert">
       No items in wishlist
     </div>
 
