--- a/src/app/prod-details/prod-details.component.css
+++ b/src/app/prod-details/prod-details.component.css
@@ -7,6 +7,7 @@
 .row{
   display: flex;
   flex-wrap: wrap;
+  padding: 0 10px;
 
 
 }
@@ -14,74 +15,64 @@
 .column{
   flex:33%;
   max-width: 33%;
+  padding: 0 5px;
 }
 
 .img1{
   border: 6px solid black;
-  margin-top:5px;
-  margin-right:5px;
-  margin-bottom:5px;
+  margin-top:10px;
+
   vertical-align: center;
 
 }
 
 .img2{
   border: 6px solid black;
-  margin-top:5px;
-  margin-bottom:5px;
-  margin-left:5px;
-  margin-right:5px;
+  margin-top:10px;
+
   vertical-align: center;
 
 }
 .img3{
   border: 6px solid black;
-  margin-top:5px;
-  margin-left:10px;
-  margin-bottom:5px;
-  vertical-align: center;
+  margin-top:10px;
+;
 
 }
 .img4{
   border: 6px solid black;
-  margin-top:5px;
-  margin-right:5px;
-  margin-bottom: 5px;
+  margin-top:10px;
+
   vertical-align: center;
 
 }
 .img5{
   border: 6px solid black;
-  margin-top:5px;
-  margin-bottom:5px;
-  margin-left:5px;
-  margin-right:5px;
+  margin-top:10px;
+
   vertical-align: center;
 
 }
 .img6{
   border: 6px solid black;
-  margin-top:5px;
-  margin-left:10px;
-  margin-bottom:5px;
+  margin-top:10px;
+
   vertical-align: center;
 
 }
 
 .img7{
   border: 6px solid black;
-  margin-top:5px;
-  margin-right:5px;
-  margin-bottom:5px;
-  margin-left: 5px;
+  margin-top:10px;
+
 
   vertical-align: center;
 }
 
 .img8{
   border: 6px solid black;
-  margin-left:5px;
-  margin-top:5px;
+
+  margin-top:10px;
   vertical-align: center;
 
 }
