--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,4 +1,5 @@
 <!--<div *ngIf="showpbar&&!(itemDetailsJson&&similarItemsJson&&photosJson)">-->
+
 <div *ngIf="showpbar||showpbar1||showpbar2">
   <div class="progress " style="width: 70% !important;margin: auto">
     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -53,7 +54,7 @@
   <div>
     <ul class="nav nav-pills mb-3 justify-content-end"  id="pills-tab" role="tablist" >
       <li class="nav-item">
-        <a class="nav-link active" id="pills-prod-tab" data-toggle="pill" href="#prodtab" role="tab" aria-controls="prodtab"
+        <a [class.active]="showResults" [class.show]="showResults" class="nav-link active show" id="pills-prod-tab" data-toggle="pill" href="#prodtab" role="tab" aria-controls="prodtab"
             aria-selected="true" (click)="prod_clicked()">Product</a>
       </li>
       <li class="nav-item">
@@ -186,18 +187,37 @@
 
       <div class="row">
       <div class="column">
-      <img class="img1" style="width: 100%" [src]="photosJson['items'][0]['link']">
-      <img class="img4" style="width: 100%" [src]="photosJson['items'][3]['link']">
+        <a target="_blank" href="{{photosJson['items'][0]['link']}}">
+          <img class="img1" style="width: 100%" [src]="photosJson['items'][0]['link']">
+        </a>
+      <a target="_blank" href="{{photosJson['items'][3]['link']}}">
+        <img class="img4" style="width: 100%" [src]="photosJson['items'][3]['link']">
+      </a>
       </div>
       <div class="column">
-      <img class="img2" style="width: 100%" [src]="photosJson['items'][1]['link']">
-      <img class="img5" style="width: 100%" [src]="photosJson['items'][4]['link']">
-      <img class="img7" style="width: 100%" [src]="photosJson['items'][6]['link']">
+      <a target="_blank" href="{{photosJson['items'][1]['link']}}">
+        <img class="img2" style="width: 100%" [src]="photosJson['items'][1]['link']">
+      </a>
+      <a target="_blank" href="{{photosJson['items'][4]['link']}}">
+        <img class="img5" style="width: 100%" [src]="photosJson['items'][4]['link']">
+      </a>
+        <a target="_blank" href="{{photosJson['items'][6]['link']}}">
+          <img class="img7" style="width: 100%" [src]="photosJson['items'][6]['link']">
+        </a>
+
       </div>
       <div class="column">
-      <img class="img3" style="width: 100%" [src]="photosJson['items'][2]['link']">
-      <img class="img6" style="width: 100%" [src]="photosJson['items'][5]['link']">
-      <img class="img8" style="width: 100%" [src]="photosJson['items'][7]['link']">
+        <a target="_blank" href="{{photosJson['items'][2]['link']}}">
+          <img class="img3" style="width: 100%" [src]="photosJson['items'][2]['link']">
+        </a>
+
+        <a target="_blank" href="{{photosJson['items'][5]['link']}}">
+          <img class="img6" style="width: 100%" [src]="photosJson['items'][5]['link']">
+        </a>
+      <a target="_blank" href="{{photosJson['items'][7]['link']}}">
+        <img class="img8" style="width: 100%" [src]="photosJson['items'][7]['link']">
+      </a>
+
       </div>
       </div>
 
@@ -308,9 +328,14 @@
           </strong>
         </td>
         <td>
-          <round-progress [current]="sjson.sellerInfo[0].positiveFeedbackPercent[0]" [stroke]="5" [max]="100" [radius]="15">
+
+
+
+          <round-progress [color]="'#008000'" [current]="sjson.sellerInfo[0].positiveFeedbackPercent[0]" [stroke]="5" [max]="100" [radius]="22">
             {{sjson.sellerInfo[0].positiveFeedbackPercent[0]}}
           </round-progress>
+            <div class="text">{{sjson.sellerInfo[0].positiveFeedbackPercent[0]}}</div>
+
         </td>
       </tr>
 
@@ -362,7 +387,7 @@
 
       <tr *ngIf="sjson.storeInfo!=undefined&&sjson.storeInfo[0].storeURL!=undefined">
         <td><strong>Buy Product At</strong></td>
-        <td><a [attr.href]="sjson.storeInfo[0].storeURL[0]" target="_blank">Store</a></td>
+        <td><a [attr.href]="sjson.storeInfo[0].storeURL[0]" style="color:#659093" target="_blank">Store</a></td>
       </tr>
 
     </table>
@@ -399,7 +424,9 @@
   </div>
     <div class="card flex-row flex-wrap bg-dark" style="margin-top: 10px;margin-bottom: 5px;" *ngFor="let row of itemArray| slice:0:5">
       <div>
-        <img class="card-header border-0" [attr.src]="row.imageURL" style="padding-bottom: 10px;padding-top: 10px;height: 160px;width: 160px;" alt="Card image cap">
+        <a target="_blank" href="{{row.imageURL}}">
+          <img class="card-header border-0" [attr.src]="row.imageURL" style="padding-bottom: 10px;padding-top: 10px;height: 160px;width: 160px;" alt="Card image cap">
+        </a>
       </div>
 
       <div class="card-block px-2" style="color: white">
