--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,6 +1,6 @@
 <!--<div *ngIf="showpbar&&!(itemDetailsJson&&similarItemsJson&&photosJson)">-->
 
-<div *ngIf="showpbar||showpbar1||showpbar2">
+<div *ngIf="showpbar||showpbar1||showpbar2" [@slideInOut]>
   <div class="progress " style="width: 70% !important;margin: auto">
     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
@@ -330,12 +330,16 @@
         <td>
 
 
-
-          <round-progress [color]="'#008000'" [current]="sjson.sellerInfo[0].positiveFeedbackPercent[0]" [stroke]="5" [max]="100" [radius]="22">
+          <div class="progress-wrapper">
+            <div class="current"
+                 style="top: 50%; bottom: auto; left: 25px; transform: translateY(-50%) translateX(-50%); font-size: 15.7143px;">
+              {{sjson.sellerInfo[0].positiveFeedbackPercent[0]}}
+            </div>
+          <round-progress [color]="'#008000'" [current]="sjson.sellerInfo[0].positiveFeedbackPercent[0]" [stroke]="5" [max]="100" [radius]="25">
             {{sjson.sellerInfo[0].positiveFeedbackPercent[0]}}
           </round-progress>
-            <div class="text">{{sjson.sellerInfo[0].positiveFeedbackPercent[0]}}</div>
 
+          </div>
         </td>
       </tr>
 
@@ -510,3 +514,6 @@
   <!-- modal ends -->
 
 </div>
+
+
+
